--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +15,10 @@
     "express-handlebars": "^4.0.0",
     "handlebars": "^4.7.3",
     "moment": "^2.24.0",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.2"
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "description": ""
