--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "description": ""
